# sickling

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
notebooks/: analysis_protrusion_per_condition.ipynb  colab_demo.ipynb  pixel_confusion_matrix.ipynb  protrusion_length_grid.ipynb  sickle_classifier_confusion_matrix.ipynb
notebooks/figures/: idea_H_min_length_sweep.csv  idea_I_max_length_sweep.csv  idea_J_max_dist_sweep.csv  idea_N_fibers_per_sickle.csv  pixel_confusion_counts_unet_fold_1_best_loop_5.csv  pixel_confusion_counts_unet_fold_2_best_loop_0.csv  pixel_confusion_summary.csv  polymer_length_matches.csv  polymer_length_per_crop.csv  protrusion_length_matches.csv  protrusion_length_per_crop.csv  protrusion_length_per_polymer.csv  protrusion_length_unmatched.csv  sickle_polymer_method_comparison.csv  sickle_polymer_per_condition.csv  sickle_polymer_per_condition_pool.csv  sickle_polymer_per_condition_pool_dist10.csv  sickle_polymer_per_fov.csv  supplementary_figure_classifier_metrics.csv
sickling/: __init__.py
sickling/protrusion_detection/: ARCHITECTURE.md  CHANGELOG.md  GUIDE.md  HITL_pipeline.ipynb  __init__.py  count2crops.jsx  count2csv.jsx
sickling/protrusion_detection/py_modules/: __init__.py  bootstrap.py  config.py  correction.py  datasets.py  densify.py  inference.py  losses.py  masks.py  metrics.py  minicrops.py  mining.py  model.py  paths.py  sampler.py  splits.py  train.py  viz.py
sickling/rbc_classification/: README.md  RESULTS.md  __init__.py  architecture.md  changelog.md  orchestrate.ipynb
sickling/rbc_classification/configs/: base.yaml  finetune_modelA.yaml  finetune_modelB.yaml  finetune_modelC.yaml  finetune_multimodal.yaml  pretrain_mae.yaml  pretrain_mae_long.yaml  smoke.yaml  smoke_ablation.yaml  smoke_finetune.yaml  smoke_multimodal.yaml  smoke_pretrain.yaml
sickling/rbc_classification/experiment_data/: batch_classify_output_schema.md  manifest.json  pairwise_stats.parquet  per_condition.parquet  per_fov.parquet  per_fov_dist10.parquet  polymer_blobs.parquet  polymer_blobs_dist10.parquet
sickling/rbc_classification/labels/: README.md  labels.csv
sickling/rbc_classification/notebooks/: 02_annotate.ipynb  02_instance_qa.ipynb  batch_classify.ipynb  make_publication_figures_v4.ipynb
sickling/rbc_classification/py_modules/: __init__.py  config.py
sickling/rbc_classification/tests/: conftest.py  test_ablation.py  test_bootstrap.py  test_crops.py  test_dataset.py  (+10 more)
tools/: build_grid.py
(+64 files in other folders)
